--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
@@ -59,6 +64,8 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+
+
 
 
 	</dependencies>
