--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,11 @@
 			<version>3.2.1</version>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.3</version>
+		</dependency>
 
 	</dependencies>
 
