--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 project.image=images/
+logging.level.org.springframework.security=DEBUG
+spring.profiles.active=dev
+
+
